--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 :root {
+  /* taken from cushon site */
   --brand-one: #e52d90;
   --brand-two: #00b5ef;
   --brand-three: #b3539f;
@@ -10,6 +11,9 @@
   --brand-nine: #ebebeb;
   --brand-ten: #666;
   --brand-eleven: #efefef;
+
+  /* broadly web-safe font stake, see: https://github.com/chrisBRN/web-safe-fonts */
+  --ff: 'Baskerville', 'Baskerville Old face', 'Garamond', 'Times New Roman', serif;
 }
 
 * {
@@ -23,5 +27,10 @@
 }
 
 body {
+  font-family: var(--ff), serif;
+  font-size: 16px;
+}
 
+a {
+  font-family: var(--ff), serif;
 }
