update: tweak card / list style

--- a/src/components/CardList/CardList.module.css
+++ b/src/components/CardList/CardList.module.css
@@ -1,12 +1,13 @@
 .cardList {
     width: 100%;
     display: flex;
+    flex-wrap: wrap;
     gap: 1rem;
 
     list-style: none;
 
     & li {
-        width: 30%;
+        /*width: 30%;*/
     }
 }
 
