--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -9,6 +9,8 @@
     width: 100%;
     aspect-ratio: 1/1;
 
+    min-width: 30vmin;
+
     &:hover {
         box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     }
