--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,19 +1,11 @@
 .card {
     background: #fff;
-    border: 1px solid #ddd;
+    border: 1px solid var(--brand-one);
     border-radius: 8px;
     padding: 1rem;
-    box-shadow: 0 1px 2px rgba(0,0,0,0.05);
-    transition: box-shadow 100ms ease-in-out;
-
-    width: 100%;
-    aspect-ratio: 1/1;
-
-    min-width: 30vmin;
-
-    &:hover {
-        box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    }
+    width: 40vmin;
+    height: 100%;
+    min-height: 20vmin;
 }
 
 
