--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -21,7 +21,7 @@
         & li > button {
             border: none;
             padding: 1rem 2rem;
-            border-radius: 8px
+            border-radius: 8px;
         }
     }
 }
@@ -40,6 +40,5 @@
     & img {
         width: 2rem;
         aspect-ratio: 1/1;
-
     }
 }
