--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,6 +1,6 @@
-.bg {
+.container {
     width: 100%;
-    height: 12rem;
+    height: 18rem;
     background-color: var(--brand-one);
 
     display: flex;
@@ -8,4 +8,9 @@
     align-items: center;
 
     color: var(--brand-five);
+
+    & h1 {
+        font-size: 4rem;
+        font-weight: lighter;
+    }
 }
