--- a/src/pages/ISA/ISA.module.css
+++ b/src/pages/ISA/ISA.module.css
@@ -1,8 +1,23 @@
 .content {
     width: 120ch;
     margin: 0 auto;
-    padding: 2rem 0;
+    padding: 6rem 0;
     display: flex;
     flex-direction: column;
     gap: 2rem;
+
+    margin-bottom: 4rem;
+}
+
+.title {
+    font-size: 2.5rem;
+}
+
+.link {
+    color: var(--brand-one);
+    text-decoration: none;
+
+    &:hover {
+        text-decoration: underline;
+    }
 }
