--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -3,7 +3,7 @@
     border: 1px solid var(--brand-one);
     border-radius: 8px;
     padding: 1rem;
-    width: 40vmin;
+    width: min(320px, 100%);
     height: 100%;
     min-height: 20vmin;
 }
