--- a/src/components/ListItem/ListItem.module.css
+++ b/src/components/ListItem/ListItem.module.css
@@ -1,13 +1,14 @@
 .container {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: var(--centered-on-mobile, flex-start);
     justify-content: flex-start;
     gap: 1rem;
     height: 100%;
 }
 
 .features {
+    width: 100%;
     list-style-position: inside;
     list-style-type: disc;
     display: flex;
@@ -15,6 +16,7 @@
     gap: 1rem;
 
     & li::marker {
+        width: 100%;
         color: var(--brand-one);
     }
 }
