--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,4 +1,4 @@
-.bg {
+.container {
     width: 100%;
     height: 10rem;
     background-color: white;
@@ -12,7 +12,7 @@
     & ul {
         list-style: none;
 
-        display: flex;
+        display: var( --desktop-only, flex); /* with more time would want to switch to a mobile friendly menu here */
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
@@ -24,6 +24,10 @@
             border-radius: 8px;
         }
     }
+}
+
+.title {
+    font-size: 1.5rem;
 }
 
 .logo {
