--- a/src/pages/ISA/ISA.module.css
+++ b/src/pages/ISA/ISA.module.css
@@ -1,7 +1,7 @@
 .content {
-    width: 120ch;
+    max-width: 120ch;
     margin: 0 auto;
-    padding: 6rem 0;
+    padding: 6rem 2rem;
     display: flex;
     flex-direction: column;
     gap: 2rem;
