--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,48 +1,51 @@
 .container {
-    width: 100%;
-    height: 10rem;
-    background-color: white;
-    padding: 0 2rem;
+	width: 100%;
+	height: 10rem;
+	background-color: white;
+	padding: 0 2rem;
 
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
 
-    & ul {
-        list-style: none;
+	& ul {
+		list-style: none;
 
-        display: var( --desktop-only, flex); /* with more time would want to switch to a mobile friendly menu here */
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        gap: 2rem;
+		display: var(
+			--desktop-only,
+			flex
+		); /* with more time would want to switch to a mobile friendly menu here */
+		flex-direction: row;
+		justify-content: space-between;
+		align-items: center;
+		gap: 2rem;
 
-        & li > button {
-            border: none;
-            padding: 1rem 2rem;
-            border-radius: 8px;
-        }
-    }
+		& li > button {
+			border: none;
+			padding: 1rem 2rem;
+			border-radius: 8px;
+		}
+	}
 }
 
 .title {
-    font-size: 1.5rem;
+	font-size: 1.5rem;
 }
 
 .logo {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 1rem;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	gap: 1rem;
 
-    color: var(--brand-one);
+	color: var(--brand-one);
 
-    text-decoration: none;
+	text-decoration: none;
 
-    & img {
-        width: 2rem;
-        aspect-ratio: 1/1;
-    }
+	& img {
+		width: 2rem;
+		aspect-ratio: 1/1;
+	}
 }
